before pull from hakim when updating inlinedit

--- a/static/angular-xeditable-0.1.8/css/xeditable.css
+++ b/static/angular-xeditable-0.1.8/css/xeditable.css
@@ -40,6 +40,8 @@ Build date: 2014-01-10
     width: auto;
     /*update***/
     height: 25px;
+    font-size: 12px;
+	padding: 1px;
     /*update***/
 }
 .editable-bstime .editable-input input[type=text] {
