--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -241,6 +241,7 @@ function onSignInCallback(authResult) {
                               data-requestvisibleactions="http://schemas.google.com/AddActivity"
                               data-clientId="{{ CLIENT_ID }}"
                               data-accesstype="offline"
+                              data-approvalprompt="force"
                               data-callback="onSignInCallback"
                               data-theme="dark"
                               data-cookiepolicy="single_host_origin"
