Add my setting in drop down mrnu os user

--- a/templates/base.html
+++ b/templates/base.html
@@ -170,6 +170,11 @@
                       Sign Out
                     </a>
                   </li>
+                  <li>
+                    <a href="">
+                      My Setting
+                    </a>
+                  </li>
                 </ul>        
               </li>
               <!-- END USER LOGIN DROPDOWN -->
