inline edit Case name

--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -186,7 +186,7 @@
                 
             <h2 class="page-title">
             <a href="/#/cases/" data-toggle="tooltip" data-placement="bottom" title="Back to Cases">
-            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Cases")}} > <%=casee.name %></h2>
+            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Cases")}} > <a editable-text="casee.name" onbeforesave="inlinePatch('Case','', 'name',casee.entityKey,$data)"> <%=casee.name %> </a></h2>
             
            <span ng-show="casee.priority">{{_("Priority")}}: <a class="tag" href="/#/search/type:Case <%=casee.priority%>"><%=casee.priority %></a></span><br>
            <span ng-show="casee.status">{{_("Status")}}: <a class="tag" href="/#/search/type:Case <%=casee.status%>"><%=casee.status %></a></span><br>
