insert task on Account

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -965,7 +965,7 @@
                                     <span><a href="/#/tasks/show/<%=task.id%>" class="discussion-content"><%= task.title%> </a> <span ng-show="task.due"> [before: <%= task.due | date:'yyyy-MM-dd '%>]</span></span>
                                     </li>
                                     
-                                    <li ng-hide="addingTask" ><a ng-click="addingTask=true" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new task</a></li>
+                                     <li><a href="#myModal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new task</a></li>
 
                                   </ul>
                                   <div class="newTask" ng-show="addingTask">
