pull from iogrow

--- a/templates/base.html
+++ b/templates/base.html
@@ -170,7 +170,7 @@
                       Sign Out
                     </a>
                   </li>
-                  <li>
+                  <li ng-controller="SearchFormController">
                     <a href="">
                       My Setting
                     </a>
