--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -298,7 +298,7 @@
         <div class="row cards-container">
 
          <div class="col-md-9">
-              <div class="inner-cards-container">
+              <div class="inner-cards-container waterfall" ng-hide="blankStateopportunity" >
             
               <div droppable ng-repeat="opp in opportunities" data-column="<%=getPosition($index)%>" class="cardElement" ng-drop="dropTag(opp)">
                  <div class="cardHeader">
@@ -332,14 +332,7 @@
                                
                 
               </div>
-              <script type="text/javascript">
-                  $('.inner-cards-container').waterfall({ 
-                      colMinWidth: 200, 
-                      defaultContainerWidth: 800,
-                      autoresize: true
-                    });
-               </script>
-               <div ng-show="blankStateopportunity" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+               <div ng-show="blankStateopportunity" data-span="3" class="blank-stat col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
                   
@@ -350,6 +343,7 @@
                   </div>
                 </div>
                 </div>
+
                 <div ng-show="isFiltering * !opportunities" data-span="3" class="col-md-12  responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
@@ -367,6 +361,20 @@
                
                                   
                <div class="clearfix"></div>
+              </div><!--/inner-cards-container-->
+              <div class="inner-cards-container" ng-show="blankStateopportunity" >
+               <div data-span="3" class="blank-stat col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body thumbnail">
+                      <img src="/static/img/opportunities_blank.png" class="img-responsive">
+                      <p class="lead">Know which proposals/bids are pending, which you’ve won, and which you’ve lost. Enter notes about the opportunities, attach proposals or contracts to the opportunities, and keep a log of any changes.</p>
+                  </div>
+                </div>
+                </div>
+                <div class="clearfix"></div>
               </div><!--/inner-cards-container-->
             <div class="row">
                <div class="col-md-12">
@@ -480,4 +488,9 @@
         }
     }
     handleUniform();
+    $('.waterfall').waterfall({ 
+        colMinWidth: 200, 
+        defaultContainerWidth: 800,
+        autoresize: true
+      });
 </script>
