before pull from server

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -209,9 +209,9 @@
 
   <!--HKA 19.11.2013 BEGIN Span who is involved -->
       <div class="col-md-4">
-        <div class="portlet">
+        <div class="portlet  task-assignees">
                   <div class="portlet-title line">
-                    <div class="caption"><i class="icon-group"></i>Who's involved</div>
+                    <div class="caption"><i class="icon-user"></i>Who's involved</div>
                     
                   </div>
                   <div class="portlet-body">
