--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -174,7 +174,7 @@
             <div class="row cards-container">
 
             <div class="col-md-9">
-             <div class="inner-cards-container">
+             <div class="inner-cards-container waterfall" ng-hide="blankStateaccount">
                 <div droppable  ng-repeat="account in accounts" data-column="<%=getPosition($index)%>" class="cardElement" ng-drop="dropTag(account)">
                     <div class="cardHeader">
                           <a href="/#/accounts/show/<%= account.id %>">
@@ -201,13 +201,6 @@
                       </div>
                     </div>
                 </div>
-               <script type="text/javascript">
-                  $('.inner-cards-container').waterfall({ 
-                      colMinWidth: 200, 
-                      defaultContainerWidth: 800,
-                      autoresize: true
-                    });
-               </script>
               <div ng-show="blankStateaccount" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
@@ -236,6 +229,22 @@
               </div>
               <div class="clearfix"></div>
               
+              </div><!--/inner-cards-container-->
+              <div class="inner-cards-container" ng-show="blankStateaccount">
+              <div  data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="thumbnail blank_slate_body">
+                      <img class="img-responsive" src="/static/img/accounts_blank.png">
+                      <p class="lead">{{ _('Accounts  pages includes a detailed page for each customer, partner, or investor in your ecosystem. You and your co-workers can collaborate to get a deep understanding.') }}</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
+                <div class="clearfix"></div>
               </div><!--/inner-cards-container-->
                <div class="row">
           <div class="col-md-12">
@@ -348,4 +357,9 @@
         }
     }
     handleUniform();
+    $('.waterfall').waterfall({ 
+        colMinWidth: 200, 
+        defaultContainerWidth: 800,
+        autoresize: true
+    });
 </script>
