--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -232,7 +232,7 @@
             <div class="row cards-container">
             <div class="col-md-9">
             
-              <div class="inner-cards-container">
+              <div class="inner-cards-container waterfall" ng-hide="blankStatecase">
               <div  droppable ng-repeat="casee in cases" data-column="<%=getPosition($index)%>" class="cardElement"  ng-drop="dropTag(casee)">
                  <div class="cardHeader">
                      <a href="/#/cases/show/<%= casee.id %>"><h2 class="cardTitle">
@@ -270,28 +270,6 @@
                         </div>               
                   </div>
               </div>
-              <script type="text/javascript">
-                  $('.inner-cards-container').waterfall({ 
-                      colMinWidth: 200, 
-                      defaultContainerWidth: 800,
-                      autoresize: true
-                    });
-               </script>                 
-               
-              
-               <div ng-show="blankStatecase" data-span="3" class="col-md-12 responsive" data-tablet="col-md-6" data-desktop="col-md-12">
-                <div class="dashboard-stat cards">
-                  
-                  
-                  <div class="blank_slate_arrow"></div>
-                  <div class="blank_slate_body thumbnail">
-                      <img src="/static/img/cases_blank.png" class="img-responsive">
-                      <p class="lead">The main goal of cases is to assist collaboration and focus of teams on delivering amazing customer experience.</p>
-                  </div>
-               
-                                  
-                </div>
-              </div>
               <div ng-show="isFiltering * !cases"  data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
@@ -307,6 +285,22 @@
               </div>
                
                                   
+               <div class="clearfix"></div>
+              </div><!--/inner-cards-container-->
+               <div class="inner-cards-container" ng-show="blankStatecase">
+               <div  data-span="3" class="col-md-12 responsive" data-tablet="col-md-6" data-desktop="col-md-12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body thumbnail">
+                      <img src="/static/img/cases_blank.png" class="img-responsive">
+                      <p class="lead">The main goal of cases is to assist collaboration and focus of teams on delivering amazing customer experience.</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>                  
                <div class="clearfix"></div>
               </div><!--/inner-cards-container-->
                 <div class="row">
@@ -423,5 +417,11 @@
         }
     }
     handleUniform();
+      $('.waterfall').waterfall({ 
+          colMinWidth: 200, 
+          defaultContainerWidth: 800,
+          autoresize: true
+        });            
+               
 </script>
 
