--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -195,7 +195,7 @@
           
             <div class="row cards-container">
             <div class="col-md-9">
-            <div class="inner-cards-container">
+            <div class="inner-cards-container waterfall" ng-hide="blankStatelead">
             
               <div  droppable ng-repeat="lead in leads" data-column="<%=getPosition($index)%>" class="cardElement" ng-drop="dropTag(lead)" >
                 <div class="cardHeader">
@@ -233,13 +233,6 @@
                                   
               
               </div>
-              <script type="text/javascript">
-                  $('.inner-cards-container').waterfall({ 
-                      colMinWidth: 200, 
-                      defaultContainerWidth: 800,
-                      autoresize: true
-                    });
-               </script>
                <div ng-show="blankStatelead" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
                   
@@ -255,12 +248,27 @@
               </div>
               <div ng-show="isFiltering * !leads" data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
                 <div class="dashboard-stat cards">
-                  
-                  
+
                   <div class="blank_slate_arrow"></div>
                   <div class="thumbnail blank_slate_body">
                       
                       <p class="lead">No results found, try with another filter</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
+              <div class="clearfix"></div>
+              </div>
+              <div class="inner-cards-container" ng-show="blankStatelead">
+               <div  data-span="3" class="col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="thumbnail blank_slate_body">
+                      <img class="img-responsive" src="/static/img/leads_blank.png">
+                      <p class="lead">You have leads coming in from a wide variety of sources. Some leads come from lists you acquired, others from business cards and still more from the "contact us" form on your website. i/oGrow help you organize informations about leads so they can be followed up on and qualified quickly.</p>
                   </div>
                
                                   
@@ -380,5 +388,11 @@
         }
     }
     handleUniform();
+              
+    $('.waterfall').waterfall({ 
+        colMinWidth: 200, 
+        defaultContainerWidth: 800,
+        autoresize: true
+      });
 </script>
 
