--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -113,37 +113,50 @@
               <input id="checkTaskInShow" type="checkbox" ng-checked="isSelectedAll"  ng-click="checkOptions()">  
               <%=task.title%>
             </h2>
+            <hr>
       <!-- BEGIN PORTLET-->
       <!-- End Portlet -->
       <div class="row">
-                 <div class="col-md-12 margin-bottom-10">
-                     <ul class="list-unstyled pull-right">
-                       <li ng-hide="task.tag.length==0" class="inline-tags">Tags:</li>
-                       <li ng-repeat="tag in task.tags" class="inline-tags">
-                         <a href="#">#<%=tag.name%>  </a>
-                       </li>
-                     </ul>
-                     <form ng-show="taskSelected">
-                         <button   ng-show="task.status=='open'"class="btn btn-sm btn-default task_action" ng-click="closeTask(task)">
-                          <i class="fa fa-lock"></i>
-                            <span class="btn-text">
-                              Close  
-                            </span>
-                          </button>
-                           <button   ng-show="task.status=='closed'" class="btn btn-sm btn-default task_action" ng-click="reopenTask(task)">
-                          <i class="fa fa-unlock"></i>
-                          <span class="btn-text">
-                          Reopen
-                          </span>
-                          </button>
-                          <button ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action">
-                          <i class="fa fa-tags"></i>
-                           <span class="btn-text">
-                              Tags
-                           </span>
-                          </button>
-                     </form>
-                  </div>
+           <div class="col-md-12 margin-bottom-10">
+               <ul class="list-unstyled pull-right">
+                 <li ng-show="task.tags" class="inline-tags">Tags:</li>
+                 <li ng-repeat="tag in task.tags" class="inline-tags">
+                   <a href="#">#<%=tag.name%>  </a>
+                 </li>
+               </ul>
+               <form ng-show="taskSelected">
+                   <button   ng-show="task.status=='open'"class="btn btn-sm btn-default task_action" ng-click="closeTask(task)">
+                    <i class="fa fa-lock"></i>
+                      <span class="btn-text">
+                        Close  
+                      </span>
+                    </button>
+                     <button   ng-show="task.status=='closed'" class="btn btn-sm btn-default task_action" ng-click="reopenTask(task)">
+                    <i class="fa fa-unlock"></i>
+                    <span class="btn-text">
+                    Reopen
+                    </span>
+                    </button>
+                    <button ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action">
+                    <i class="fa fa-tags"></i>
+                     <span class="btn-text">
+                        Tags
+                     </span>
+                    </button>
+                    <button ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action">
+                    <i class="fa fa-tags"></i>
+                     <span class="btn-text">
+                        Tags
+                     </span>
+                    </button>
+                    <button ng-click="showAssigneeTags()" class="btn btn-sm btn-default task_action">
+                    <i class="fa fa-tags"></i>
+                     <span class="btn-text">
+                        Tags
+                     </span>
+                    </button>
+               </form>
+            </div>
               
         </div>
         <div class="row">
@@ -167,7 +180,7 @@
                         </li>
                       </ul>
                      <p class⁼"lead"=""><strong>Discuss this task :</strong> </p>
-                      <form id="addComment" ng-submit="addComment(comment)" class="ng-pristine ng-valid">
+                      <form id="addComment" ng-submit="addComment(comment)" class="well ng-pristine ng-valid">
                       <div class="form-group">
                                         <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
                                       
@@ -178,6 +191,7 @@
                         <input ng-hide="isLoading" type="submit" class="btn green" value="Add comment">
                         <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
                         </div>
+                                  <div class="clearfix"></div>
                   </form>
                 </div>
                   
