--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -113,7 +113,7 @@
                 <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                   
-                  <input  ng-click="deleteaccount(account)" type="submit" class="btn red" value="Delete this Account">
+                  <input  ng-click="deleteaccount(account)" type="submit" class="btn red" value="Delete this Information">
                   <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
                 </div>
             </form>
@@ -251,7 +251,7 @@
                                 </div>
                                   <ul class="list-unstyled contact-infos">
 
-                                    <li ng-repeat="phone in infonodes.phones"> <a editable-text="phone.number" onbeforesave="inlinePatch('Infonode','phones', 'number',phone.entityKey,$data)"  edittooltip e-form="phonenumber"> <%=phone.number%> </a>, <a editable-select="phone.type" e-ng-options="s.value as s.text for s in statuses" onbeforesave="inlinePatch('Infonode','phones', 'type',phone.entityKey,$data)" edittooltip e-form="phone_type_form"> <%= phone.type%> </a></li>
+                                    <li ng-repeat="phone in infonodes.phones"> <span editable-text="phone.number" onbeforesave="inlinePatch('Infonode','phones', 'number',phone.entityKey,$data)"  edittooltip e-form="phonenumber"> <%=phone.number%> </span>, <span editable-select="phone.type" e-ng-options="s.value as s.text for s in statuses" onbeforesave="inlinePatch('Infonode','phones', 'type',phone.entityKey,$data)" > <%= phone.type%> </span></li>
 
           
                                     <li><a href="#phonemodal"  class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new Phone</a></li>
@@ -262,7 +262,7 @@
                                  
                                 </div>
                                   <ul class="list-unstyled contact-infos">
-                                    <li ng-repeat="email in infonodes.emails"> <a editable-text="email.email" onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)" edittooltip e-form="phonenumber"> <%=email.email%> </a>  </li>
+                                    <li ng-repeat="email in infonodes.emails"> <span editable-text="email.email" onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)" edittooltip e-form="phonenumber"> <%=email.email%> </span>  </li>
                                     
                                     <li><a href="#emailmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new email address </a></li>
 
