--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -84,8 +84,13 @@
                     </div-->
                     <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("Amount")}} </label>
+
                        
-                        <div class="col-md-9">
+                       <div class="col-md-9">
+                          <input type="text" required id="id_name" class="form-control" ng-model="opportunity.amount">
+                       </div>
+                       
+                        <!--div class="col-md-9">
                         <div class="row">
                           <div class="col-md-3 inline-div">
                               <select  class="form-control" ng-model="opportunity.currency">
@@ -179,7 +184,7 @@
                         </div>
                          
                           
-                        </div> 
+                        </div--> 
                         
                     </div>
                     <div class="form-group">
