--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,10 @@
 
 
   <script type="text/javascript">
+  window.___gcfg = {
+  // lang: 'en',
+    parsetags: 'explicit'
+  };
   (function() {
     var po = document.createElement('script');
     po.type = 'text/javascript'; po.async = true;
