adding /leads/new page

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -144,9 +144,9 @@
         <div class="row">
           
           <div class="col-md-2"> 
-                  <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
+                  <a  href="/#/leads/new"  id="sample_editable_1_new" class="btn red">
                     {{ _("New Lead") }} <i class="icon-plus"></i>
-                    </button>          
+                    </a>          
           </div>
           <div class="col-md-2" ng-show="leads+isFiltering">
               <div class="btn-group btn-filter">
