finishing leads/new page

--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -219,7 +219,7 @@
                             <div class="form-group">
                               <label class="control-label col-md-4">First Name</label>
                               <div class="col-md-8">
-                                <input ng-model="lead.firstname" type="text" class="form-control">
+                                <input autofocus ng-model="lead.firstname" type="text" class="form-control">
                               </div>
                             </div>
                           </div>
@@ -597,7 +597,7 @@
                         <label  class="required col-md-3 control-label">{{_("First Name")}} *</label>
                        
                         <div class="col-md-9">
-                          <input type="text" class="form-control" required id="id_firstname" ng-model="lead.firstname">
+                          <input type="text"  class="form-control" required id="id_firstname" ng-model="lead.firstname">
                           
                         </div>
                     </div>
