working on contacts/new page

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -129,7 +129,7 @@
           <div class="col-md-3" > 
                     
                 <div class="btn-group">
-                                        <a class="btn red" href="#" ng-click="showModal()" data-toggle="dropdown">
+                                        <a class="btn red" href="/#/contacts/new" >
                                         <i class="icon-plus"></i> {{ _("New Contact") }}
                                        
                                         </a>
