--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -83,7 +83,7 @@
                       <div class="form-group">
                         <label class="control-label col-md-4">Account</label>
                         <div class="col-md-8">
-                          <input type="text" required ng-model="searchAccountQuery" typeahead="account as account.name  for account in accounts | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control" placeholder="Search">
+                          <input type="text"  ng-model="searchAccountQuery" typeahead="result as result.name  for result in results | filter:$viewValue | limitTo:10" typeahead-on-select="selectAccount()" class="form-control"placeholder="Search">
                         </div>
                       </div>
                     </div>
