adding new account page

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -166,7 +166,7 @@
                     </form>
           </div>
           <div class="col-md-2" ng-show="contacts+isFiltering">
-              <div class="btn-group  tbtn-sort">
+              <div class="btn-group  btn-sort">
                                     <a class="btn btn-default" href="#" data-toggle="dropdown">
                                     Sort by
                                     <i class="icon-angle-down"></i>
