working on accounts/new page

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -115,9 +115,9 @@
 
           
             
-                    <button  ng-click="showModal()" id="sample_editable_1_new" class="btn red">
+                    <a href="/#/accounts/new" class="btn red">
                     {{ _("New Account") }} <i class="icon-plus"></i>
-                    </button>
+                    </a>
                
             
             
