updating the subheader on accounts and contacts
Former-commit-id: dbbf8b550d048f94b72b67eff752069d2f031910

--- a/templates/leads/lead_new.html
+++ b/templates/leads/lead_new.html
@@ -17,7 +17,7 @@
 <div class="currentApp">
   <h2 class="page-title">
     <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png">
-    Admin Console  
+    {{active_app.label}}
   </h2>
 </div>
   <div class=" subHeaderContent">
