--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -11,7 +11,25 @@
       </ul>
       <!-- END SIDEBAR MENU -->
 </div>
-    
+<div class="row subHeader">
+<div class="currentApp">
+  <h2 class="page-title">
+    <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png">
+    {{active_app.label}}
+  </h2>
+</div>
+  <div class=" subHeaderContent">
+            <div class="pull-right sharebuttonDiv"> 
+                  
+                  <button class="btn red jfk-button jfk-button-action" ng-click="save(account)">
+                    Create
+                  </button>
+            </div>
+                  <h2 class="page-title">
+            <a href="/#/accounts" data-toggle="tooltip" data-placement="bottom" title="Back to Accounts">
+            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Accounts")}} > <a editable-text="account.firstname" onbeforesave="inlinePatch('Account','', 'firstname',account.entityKey,$data)"> <%= account.name %>  </a> </h2>
+  </div>
+</div>
 <div  class="page-content">
   <div class="loader-container row" ng-show="isLoading">
         <div class="loader-dialog col-md-4 col-md-offset-4 ">
@@ -34,21 +52,7 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-        <div class="row">
-          
-          <div class="col-md-12">
-            <div class="pull-right sharebuttonDiv"> 
-                   <a class="btn red jfk-button jfk-button-action" ng-click="save(account)">
-                     Create
-                  </a>
-            </div>
-                
-            <h2 class="page-title">
-            <a href="/#/accounts" data-toggle="tooltip" data-placement="bottom" title="Back to Accounts">
-            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Accounts")}} > <a editable-text="account.firstname" onbeforesave="inlinePatch('Account','', 'firstname',account.entityKey,$data)"> <%= account.name %>  </a> </h2>
-            <hr>
-          </div>
-        </div>
+        
         
 
             <div class="row">
@@ -57,6 +61,7 @@
                 <form class="form-horizontal ">
                           <div class="row">
                           <div class="col-md-12">
+                       
                             <div class="form-group">
                               <label class="control-label col-md-2">Name</label>
                               <div class="col-md-10">
