--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -13,6 +13,25 @@
      
       <!-- END SIDEBAR MENU -->
 </div> 
+<div class="row subHeader">
+<div class="currentApp">
+  <h2 class="page-title">
+    <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png">
+    {{active_app.label}}
+  </h2>
+</div>
+  <div class=" subHeaderContent">
+            <div class="pull-right sharebuttonDiv"> 
+                       <a class="btn red jfk-button jfk-button-action" ng-click="save(contact)">
+                         Create
+                      </a>
+                </div>
+                    
+                <h2 class="page-title">
+                <a href="/#/contacts" data-toggle="tooltip" data-placement="bottom" title="Back to contacts">
+                <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Contacts")}} > <a editable-text="contact.firstname" onbeforesave="inlinePatch('Contact','', 'firstname',contact.entityKey,$data)"> <%= contact.firstname %>  </a> <a editable-text="contact.lastname" onbeforesave="inlinePatch('Contact','', 'lastname',contact.entityKey,$data)" > <%= contact.lastname %> </a></h2>
+  </div>
+</div>
 <div  class="page-content">
       <div class="loader-container row" ng-show="isLoading">
             <div class="loader-dialog col-md-4 col-md-offset-4 ">
@@ -33,20 +52,7 @@
       <div class="" >
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-          <div class="row">
-            <div class="col-md-12">
-                <div class="pull-right sharebuttonDiv"> 
-                       <a class="btn red jfk-button jfk-button-action" ng-click="save(contact)">
-                         Create
-                      </a>
-                </div>
-                    
-                <h2 class="page-title">
-                <a href="/#/contacts" data-toggle="tooltip" data-placement="bottom" title="Back to contacts">
-                <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Contacts")}} > <a editable-text="contact.firstname" onbeforesave="inlinePatch('Contact','', 'firstname',contact.entityKey,$data)"> <%= contact.firstname %>  </a> <a editable-text="contact.lastname" onbeforesave="inlinePatch('Contact','', 'lastname',contact.entityKey,$data)" > <%= contact.lastname %> </a></h2>
-                <hr>
-            </div>
-          </div>
+          
 
             <div class="row">
               <div class="col-md-9">
