updating subheader on leads,cases,opportunities,tasks
Former-commit-id: b461c4b7b61c41d023bc9c40abd7f18954957233

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -1,4 +1,20 @@
-
+<div class="row subHeader">
+<div class="currentApp">
+  <h2 class="page-title">
+    <img class="platform_icons" height="25" width="25" src="static/img/admin_console.png">
+    {{active_app.label}}
+  </h2>
+</div>
+  <div class=" subHeaderContent">
+            <div class="pull-right sharebuttonDiv"> 
+                  
+                  <!-- <button class="btn jfk-button jfk-button-action" ng-click="save(account)">
+                    <i class="fa-cog"></i>
+                  </button> -->
+            </div>
+                  <h2 class="page-title">{{ _("Cases") }} </h2>
+  </div>
+</div>
 
 <div class="page-sidebar nav-collapse collapse">
       <!-- BEGIN SIDEBAR MENU -->        
@@ -162,9 +178,7 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-        <div class="row ">
-            <div class="col-md-12"> <h2 class="page-title">{{ _("Cases") }} </h2></div>
-          </div>
+        
   
           
           <div class="row">
