updating sign-up page
Former-commit-id: bcdf5760f5832c648662c1bb400f345849676702

--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- saved from url=(0122)https://accounts.google.com/ServiceLogin?hl=en&continue=https://www.google.dz/%3Fgws_rd%3Dcr%26ei%3DjZk9U-j0A6HX0QXK14CYBQ -->
+
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
   <meta content="width=300, initial-scale=1" name="viewport">
   <meta name="google" value="notranslate">
-  <title>Sign in - Google Accounts</title>
+  <title>Sign in - it's on Google and it just works</title>
 <style>
   html, body {
   font-family: Arial, sans-serif;
